--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "flv.js": "1.6.2",
     "headroom.js": "0.12.0",
     "history": "5.3.0",
-    "hls.js": "1.4.12",
+    "hls.js": "github:nyanmisaka/hls.js#v1.5.0-fix-firefox-av1",
     "intersection-observer": "0.12.2",
     "jassub": "1.7.1",
     "jellyfin-apiclient": "1.10.0",
